# reppo-hackathon

./: .gitignore  LICENSE  README.md  dataSolver.py  digest.txt  ipfsUploader.py  local.py  main.py  manifest.json  mcp-server-giga-mcp.log.txt  mcp.log.txt  mock_mcp_server.py  nftAuthorizer.py  nodes.json  pipeline.py  pyproject.toml  requirements.txt  requirments.txt  rfdListener.py  sample_rfd.json  solverNode.py  solver_server.py  submitSolution.py
data/: rfd_sf_weather_may_aug_001_solution.json
datasolver/: __init__.py  config.py  datasolver.py  router.py  types.py
datasolver/providers/: huggingface.py  mock.py  provider.py
datasolver/providers/mcp/: client.py  provider.py
datasolver/providers/mcp/tools/: dynamodb.py  text_generator.py  tool.py
sub_servers/: adder_server.py  nba_players.db  random_server.py  sqlite_server.py
tests/integration/: test_pipeline.py
tests/unit/: test_mcp_client.py  test_mock_server.py  test_router.py
