[project]
name = "solver-node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.10.1",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "trio>=0.30.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
