[project]
name = "solver-node-demo"
version = "0.1.0"
description = "A local demo of an MCP orchestrator server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.10.1"
]

[project.scripts]
solver-node = "main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
